// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`application-decision-date GET /change should render the application decision date change page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-decision-date-hint">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">What’s the date on the decision letter from the local planning authority?​</legend>
                                <div                                 id="application-decision-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                        <div class="govuk-date-input" id="application-decision-date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                    id="application-decision-date-day" name="application-decision-date-day"
                                    type="text" value="" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                    id="application-decision-date-month" name="application-decision-date-month"
                                    type="text" value="" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                    id="application-decision-date-year" name="application-decision-date-year"
                                    type="text" value="" inputmode="numeric">
                                </div>
                            </div>
                        </div>
                        </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`application-decision-date GET /change should render the application decision date change page when decision not received 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-decision-date-hint">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">What date was your decision due from the local planning authority?</legend>
                                <div                                 id="application-decision-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                        <div class="govuk-date-input" id="application-decision-date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                    id="application-decision-date-day" name="application-decision-date-day"
                                    type="text" value="" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                    id="application-decision-date-month" name="application-decision-date-month"
                                    type="text" value="" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                    id="application-decision-date-year" name="application-decision-date-year"
                                    type="text" value="" inputmode="numeric">
                                </div>
                            </div>
                        </div>
                        </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`application-decision-date POST /change should re-render applicationdecisionDate change page if day is not valid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-decision-date-day">Date day must be between 1 and 31</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-decision-date-hint application-decision-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">What’s the date on the decision letter from the local planning authority?​</legend>
                                <div                                 id="application-decision-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                        <p id="application-decision-date-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date day must be between
                            1 and 31</p>
                        <div class="govuk-date-input" id="application-decision-date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                    id="application-decision-date-day" name="application-decision-date-day"
                                    type="text" value="32" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                    id="application-decision-date-month" name="application-decision-date-month"
                                    type="text" value="06" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                    id="application-decision-date-year" name="application-decision-date-year"
                                    type="text" value="2021" inputmode="numeric">
                                </div>
                            </div>
                        </div>
                        </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`application-decision-date POST /change should re-render applicationdecisionDate change page if month not valid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-decision-date-month">Date month must be between 1 and 12</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-decision-date-hint application-decision-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">What’s the date on the decision letter from the local planning authority?​</legend>
                                <div                                 id="application-decision-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                        <p id="application-decision-date-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date month must be between
                            1 and 12</p>
                        <div class="govuk-date-input" id="application-decision-date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                    id="application-decision-date-day" name="application-decision-date-day"
                                    type="text" value="15" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                    id="application-decision-date-month" name="application-decision-date-month"
                                    type="text" value="15" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                    id="application-decision-date-year" name="application-decision-date-year"
                                    type="text" value="2021" inputmode="numeric">
                                </div>
                            </div>
                        </div>
                        </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`application-decision-date POST /change should re-render to applicationdecisionDate change page if year not valid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-decision-date-year">Date year must be a number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-decision-date-hint application-decision-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">What’s the date on the decision letter from the local planning authority?​</legend>
                                <div                                 id="application-decision-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                        <p id="application-decision-date-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date year must be a number</p>
                        <div                         class="govuk-date-input" id="application-decision-date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                    id="application-decision-date-day" name="application-decision-date-day"
                                    type="text" value="15" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                    id="application-decision-date-month" name="application-decision-date-month"
                                    type="text" value="12" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="application-decision-date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                    id="application-decision-date-year" name="application-decision-date-year"
                                    type="text" value="a" inputmode="numeric">
                                </div>
                            </div>
                </div>
                </fieldset>
            </div>
            <button type="submit" data-prevent-double-click="true" class="govuk-button"
            data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
    </div>
    </div>
</main>"
`;
